# bazel-check

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  shell.nix
ndn/: BUILD.bazel  bzl_cmd.exec.sh.in  exec.py  main.go  rule.bzl
