load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ndn_lib",
    srcs = ["main.go"],
    importpath = "github.com/patryk-kozak/bzl-ndn/ndn",
    visibility = ["//visibility:private"],
    deps = ["@com_github_jessevdk_go_flags//:go_default_library"],
)

go_binary(
    name = "ndn",
    embed = [":ndn_lib"],
    visibility = ["//visibility:public"],
)
